# yukari-rubi

./: .gitignore  .oxfmtrc.json  Cargo.toml  eslint.config.js  fetch_dictionary.sh  oxlint.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: build.mjs  fetch-dict.mjs
src/: background.ts  content.ts  main.ts  popup.ts
static/: background.js  manifest.chrome.json  manifest.json  popup.html
static/_locales/en/: messages.json
static/_locales/ja/: messages.json
static/_locales/ko/: messages.json
sudachi-wasm/: .gitignore  .gitmodules  Cargo.toml  README.md  build_kkc.sh
sudachi-wasm/.github/workflows/: pages.yml
sudachi-wasm/examples/browser/: index.html  serve.js
sudachi-wasm/examples/nodejs/: main.mjs  package.json
sudachi-wasm/julia/: ime_costs.jl  kkc_costs.jl  kkc_test.jl  matrix_patches.jl
sudachi-wasm/src/: lib.rs
sudachi-wasm/sudachi.rs/: .gitmodules
sudachi-wasm/sudachi.rs/python/py_src/sudachipy/: sudachipy.pyi
sudachi-wasm/sudachi.rs/python/src/: build.rs  dictionary.rs  morpheme.rs  pos_matcher.rs
sudachi-wasm/sudachi.rs/rsmarisa/tests/: cpp_binary_test.cc
sudachi-wasm/sudachi.rs/sudachi/: Cargo.toml
sudachi-wasm/sudachi.rs/sudachi/src/: ime.rs  kana.rs  lib.rs
sudachi-wasm/sudachi.rs/sudachi/src/dic/: compact.rs  connect.rs  dictionary.rs  grammar.rs  lexicon_set.rs  mod.rs
sudachi-wasm/sudachi.rs/sudachi/src/dic/lexicon/: marisa_trie.rs  mod.rs  reading_trie.rs  word_infos.rs
sudachi-wasm/sudachi.rs/sudachi/src/plugin/: loader.rs
sudachi-wasm/sudachi.rs/sudachi/src/util/: fxhash.rs
sudachi-wasm/sudachi.rs/sudachi/tests/common/: mod.rs
sudachi-wasm/sudachi.rs/sudachi/tests/resources/: sudachi_marisa.json  system.dic.test.marisa  user.dic.test.marisa
sudachi-wasm/tests/: mczb_connection_matrix.rs
