[package]
name = "sudachi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["build-dictionary"]
## Enables dictionary-building utilities (requires the `csv` parser).
## Not needed for tokenization; automatically excluded from WASM builds that
## use `default-features = false`.
build-dictionary = ["dep:csv"]
## Use MARISA trie instead of YADA double-array trie for the lexicon index.
## MARISA (Matching Algorithm with Recursively Implemented StorAge) is a static,
## space-efficient trie that typically uses 5-10x less RAM than double-array tries.
## Dictionaries must be built AND loaded with this feature consistently.
marisa-trie = ["dep:rsmarisa", "dep:ruzstd"]

[dependencies] # this should be sorted
aho-corasick = "1" # MIT/Apache 2.0
bitflags = "2.5" # MIT/Apache 2.0
csv = { version = "1.3", optional = true } # Unilicense/MIT
fancy-regex = "0.13" # MIT
indexmap = "2.2" # MIT/Apache 2.0
itertools = "0.13" # MIT/Apachie 2.0
lazy_static = "1.4" # MIT/Apache 2.0
libloading = "0.8" # ISC (MIT-compatible)
memmap2 = "0.9" # MIT/Apache 2.0
ruzstd = { version = "0.8", git = "https://github.com/KillingSpark/zstd-rs.git", optional = true } # MIT
nom = "7" # MIT
regex = "1" # MIT/Apache 2.0
rsmarisa = { path = "../rsmarisa", optional = true, default-features = false } # BSD-2-Clause
serde = { version = "1.0", features = ["derive"] } # MIT/Apache 2.0
serde_json = "1.0" # MIT/Apache 2.0
thiserror = "1.0" # MIT/Apache 2.0
unicode-normalization = "0.1" # MIT/Apache 2.0
yada = "0.5" # MIT/Apache 2.0

[dev-dependencies]
claim = "0.5" # MIT/Apache 2.0
tempfile = "3" # MIT/Apache 2.0

# Plugins for tests
default_input_text = { path = "../plugin/input_text/default_input_text" }
simple_oov = { path = "../plugin/oov/simple_oov" }
join_numeric = { path = "../plugin/path_rewrite/join_numeric" }
join_katakana_oov = { path = "../plugin/path_rewrite/join_katakana_oov" }

[lib]
crate-type = ["rlib"]
